Updated SAP with Time Series forecasts of patients and length of stay ... working on surgical procedure

--- a/protocol.qmd
+++ b/protocol.qmd
@@ -8,7 +8,7 @@ format:
     number-sections: true
     linestretch: 2
 ---
-
+<!--  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 -->
 ```{r echo=FALSE}
 # Set values
 SPONSOR_NUMBER <- FALSE
@@ -191,7 +191,7 @@ Name: (please print): Position:\
 +---------------------------------+--------------------------------------------------------+
 | Trials Pharmacist               | Beatriz Duran                                          |
 +---------------------------------+--------------------------------------------------------+
-| Committees                      | Data Monitory and Ethics @sec-dmec                     |
+| Committees                      | Data Monitoring and Ethics @sec-dmec                     |
 |                                 |                                                        |
 |                                 | Trial Steering Committee @sec-tsc                      |
 +---------------------------------+--------------------------------------------------------+
@@ -429,7 +429,11 @@ The idea for the use of Anakinra in preventing and treating delirium emerged fro
 
 #### Clinical Researchers {#sec-clin-research}
 
-[Prof. Leela Biant](https://orcid.org/0000-0002-5291-8898)
+[Prof. Leela Biant](https://orcid.org/0000-0002-5291-8898) is the Academic head of department of Orthopaedics at the University of Manchester and a Consultant Orthopaedic Surgery Consultant at Manchester University Hospitals NHS Foundation Trust. She is lead Clinician for Cartilage Repair and Regeneration, and has conducted research into the best techniques of clinical cartilage repair and the potential of the use of stem cells in articular cartilage repair.
+
+[Dr. Ross A. Dunne](https://orcid.org/0000-0003-2046-6193) is a Consultant Later Life Psychiatrist at Greater Manchester Mental Health Foundation Trust and Clinical Director of the Greater Manchester Dementia Research Centre. He has been a Principal Investigator on over 25 commercial clinical trials of advanced therapeutics in dementia, is NIHR-CRN lead for Greater Manchester, and dementia theme lead for Health Innovation Manchester. He leads Brain Health Manchester, a multidisciplinary clinic focusing on primary and secondary prevention of cognitive decline, biomarker-based diagnosis, and individualised risk reduction.
+
+[Prof. Richard Body](https://www.research.manchester.ac.uk/portal/richard.body.html) is Professor of Emergency Medicine at the University of Manchester, Honorary Consultant in Emergency Medicine and Group Director of Research & Innovation at Manchester University NHS Foundation Trust. He is also the lead for Business Engagement & Innovation for the School of Medical Science. Rick has a personal academic interest in analytical modelling, decision support, diagnostics, and the design and conduct of large observational cohort studies and late phase clinical trials.  
 
 #### Statistical advisers
 
@@ -465,9 +469,11 @@ Anakinra, delirium, fracture, neck of femur, hip, prevention
 
 ### BACKGROUND {#sec-bg}
 
-Delirium is a syndrome of disturbed alertness, orientation and arousal, complicated by neuropsychiatric abnormalities like paranoia and hallucinations. A single episode of delirium may permanently damage cognition(1) and increases the risk of dementia 3-fold over the following 3 years(2). Delirium is more common in older people and occurs in 20% of hospital inpatients and 40% of postoperative surgical patients, including those undergoing hip repair(3). Up to 90% of those who fracture their hip have underlying abnormalities in biomarkers for Alzheimer's disease (rising to 98% in those with known mild cognitive problems)(4).
+**Delirium**Delirium is a syndrome of disturbed alertness, orientation and arousal, complicated by neuropsychiatric abnormalities like paranoia and hallucinations. A single episode of delirium may permanently damage cognition(1) and increases the risk of dementia 3-fold over the following 3 years(2). Delirium is more common in older people and occurs in 20% of hospital inpatients and 40% of postoperative surgical patients, including those undergoing hip repair(3). Up to 90% of those who fracture their hip have underlying abnormalities in biomarkers for Alzheimer's disease (rising to 98% in those with known mild cognitive problems)(4).
 
-In the UK, 65,000 people fracture their hip every year(3). On average, 7% of these people will die within a month of their fracture. Postoperative delirium doubles the risk of death in the 12 months after fracture(5), especially if superimposed on pre-existing dementia(6). So, hip fracture is a major public health concern, both hastening dementia onset and causing premature death in those living with dementia. There is currently no treatment that prevents or shortens the duration of delirium, and no promising candidate. Delirium is often treated by addressing the underlying contributors (e.g. infection, pain, sedating medicines) and using sensitive nursing practice and clear communication. This can improve outcomes. However, after hip surgery, delirium impairs the early mobilisation and engagement with physiotherapy vital for good postoperative outcomes in dementia, like mobility and discharge to your own home.
+**Hip fracture** In the UK, 65,000 people fracture their hip every year(3). On average, 7% of these people will die within a month of their fracture. Postoperative delirium doubles the risk of death in the 12 months after fracture(5), especially if superimposed on pre-existing dementia(6). So, hip fracture is a major public health concern, both hastening dementia onset and causing premature death in those living with dementia. There is currently no treatment that prevents or shortens the duration of delirium, and no promising candidate. Delirium is often treated by addressing the underlying contributors (e.g. infection, pain, sedating medicines) and using sensitive nursing practice and clear communication. This can improve outcomes. However, after hip surgery, delirium impairs the early mobilisation and engagement with physiotherapy vital for good postoperative outcomes in dementia, like mobility and discharge to your own home.
+
+**Hip fracture types** 
 
 #### Review of existing evidence
 
@@ -1557,7 +1563,9 @@ There will be no cause for increasing doses after missed doses, nor will a dosin
 <!--     • whether the dose can be modified due to patient request -->
 The dose can not be modified due to participant or relative request. The dose can not be modified sue to clinician or professional request.
 <!--     • procedures in the event of toxicity reactions (if applicable) e.g. if it is possible to reduce the dosage of IMP or if any rescue medication may need to be administered -->
-Toxicity reactions with Anakinra are not common. Site reactions are common after prolongeddosing and usually result in inflammation, erythema and discoloration around injection sites.  As trial participants will only be receiving 8 to 10 injections, and with the benefit of the rotation of sites, we do not anticipate site reactions which would result in either unblinding or discomfort for participants. If site reactions occur, they will be treated as per clinical guidance, by ensuring rotation of the injection site, providing pain relief and careful participant positioning.
+**Local toxicity reactions with Anakinra are not common.**
+
+**Site reactions** are common after prolonged dosing and usually result in inflammation, erythema and discoloration around injection sites.  As trial participants will only be receiving 8 to 10 injections, and with the benefit of the rotation of sites, we do not anticipate site reactions which would result in either unblinding or discomfort for participants. If site reactions occur, they will be treated as per clinical guidance, by ensuring rotation of the injection site, providing pain relief and careful participant positioning. Site reactions will be reported as a Serious Adverse Event of Interest, but treatment may continue. 
 
 Anaphylactic reactions will be dealt with using the local anaphylaxis guidance for Manchester Foundation Trust, and referred for post-anaphylaxis care if possible at the Greater Manchester Rapid Access Anaphylaxis Clinic.  
 <!--     • when a dose modification will result in the participant having to withdraw from treatment -->
